crates/ty_python_semantic/resources/mdtest/snapshots/1._functions.md_-_2._Generic_functions___P…_-_6._Inferring_a_bound_ty….snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: 1. functions.md - 2. Generic functions: P… - 6. Inferring a bound ty…
mdtest path: crates/ty_python_semantic/resources/mdtest/generics/pep695/functions.md
---

# Python source files

## mdtest_snippet.py

```
1 | from typing_extensions import reveal_type
2 | 
3 | def f[T: int](x: T) -> T:
4 |     return x
5 | 
6 | reveal_type(f(1))  # revealed: Literal[1]
7 | reveal_type(f(True))  # revealed: Literal[True]
8 | # error: [invalid-argument-type]
9 | reveal_type(f("string"))  # revealed: Unknown
```

# Diagnostics

```
info[revealed-type]: Revealed type
 --> src/mdtest_snippet.py:6:13
  |
4 |     return x
5 |
6 | reveal_type(f(1))  # revealed: Literal[1]
  |             ^^^^ `Literal[1]`
7 | reveal_type(f(True))  # revealed: Literal[True]
8 | # error: [invalid-argument-type]
  |

```

```
info[revealed-type]: Revealed type
 --> src/mdtest_snippet.py:7:13
  |
6 | reveal_type(f(1))  # revealed: Literal[1]
7 | reveal_type(f(True))  # revealed: Literal[True]
  |             ^^^^^^^ `Literal[True]`
8 | # error: [invalid-argument-type]
9 | reveal_type(f("string"))  # revealed: Unknown
  |

```

```
info[revealed-type]: Revealed type
 --> src/mdtest_snippet.py:9:13
  |
7 | reveal_type(f(True))  # revealed: Literal[True]
8 | # error: [invalid-argument-type]
9 | reveal_type(f("string"))  # revealed: Unknown
  |             ^^^^^^^^^^^ `Unknown`
  |

```

```
error[invalid-argument-type]: Argument to function `f` is incorrect
 --> src/mdtest_snippet.py:9:15
  |
7 | reveal_type(f(True))  # revealed: Literal[True]
8 | # error: [invalid-argument-type]
9 | reveal_type(f("string"))  # revealed: Unknown
  |               ^^^^^^^^ Argument type `Literal["string"]` does not satisfy upper bound of type variable `T`
  |
info: Type variable defined here
 --> src/mdtest_snippet.py:3:7
  |
1 | from typing_extensions import reveal_type
2 |
3 | def f[T: int](x: T) -> T:
  |       ^^^^^^
4 |     return x
  |
info: rule `invalid-argument-type` is enabled by default

```
